feat(notifications): 添加用户邮件通知偏好与 UI/后端集成
- 新增数据库表与迁移 user_notification_preferences、Eloquent 模型 UserNotificationPreference
- 新增 NotificationPreferenceService（类别定义、读取/更新偏好、缓存与按 email 决策）
- 将 NotificationPreferenceService 注入依赖容器并在 EmailService 中使用以尊重用户偏好（各类通知发送前校验）
- 在 UserController 中添加获取/更新通知偏好的接口实现，并注册对应路由
- 更新 OpenAPI 文档，补充 /users/me/notification-preferences 及相关 schema
- 新增前端 NotificationSettingsPage、路由、API 客户端方法、Navbar 导航项与中/英本地化文案
- 微调 VerifyEmail 页面及 AuthController：在发送/验证邮箱验证码时要求并校验 Cloudflare Turnstile token（加强人机校验）
- 调整依赖与测试（dependencies 注入 NotificationPreferenceService，更新 EmailServiceTest 调用签名）

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -22,6 +22,7 @@
     "products": "Point Store",
     "messages": "Messages",
     "profile": "Profile",
+    "notifications": "Notification settings",
     "admin": "Admin",
     "login": "Login",
     "register": "Register",
@@ -126,6 +127,7 @@
       "tokenVerifying": "Verifying your email...",
       "tokenSuccess": "Email verified successfully. Redirecting...",
       "tokenFailed": "The verification link is invalid or has expired.",
+      "turnstileRequired": "Please complete the human verification challenge.",
       "submit": "Complete verification",
       "submitting": "Submitting...",
       "resend": "Resend code",
@@ -1940,6 +1942,50 @@
     "uploading": "Uploading...",
     "uploadFiles": "Upload {{count}} files",
     "uploadFile": "Upload file"
+  },
+  "settings": {
+    "notifications": {
+      "title": "Email notification preferences",
+      "subtitle": "Choose which emails CarbonTrack should send you. Updates take effect immediately.",
+      "emailHeading": "Email alerts",
+      "emailDescription": "Toggle the email notifications you would like to receive. Direct messages and security alerts are always delivered.",
+      "locked": "This notification is required and cannot be disabled.",
+      "reset": "Reset",
+      "save": "Save changes",
+      "saving": "Saving...",
+      "saveSuccess": "Notification preferences updated.",
+      "saveFailed": "Failed to update notification preferences.",
+      "categories": {
+        "verification": {
+          "label": "Account verification",
+          "description": "Codes and links required to verify your email address."
+        },
+        "security": {
+          "label": "Security alerts",
+          "description": "Password reset links and other important security updates."
+        },
+        "system": {
+          "label": "System tips & onboarding",
+          "description": "Welcome guidance and important account announcements."
+        },
+        "transaction": {
+          "label": "Point exchanges",
+          "description": "Updates about your reward redemptions and exchange status."
+        },
+        "activity": {
+          "label": "Activity reviews",
+          "description": "Results and feedback for your submitted carbon-saving activities."
+        },
+        "announcement": {
+          "label": "Announcements",
+          "description": "Platform-wide news, maintenance notices, and newsletters."
+        },
+        "message": {
+          "label": "Direct messages",
+          "description": "Email copies of messages from other users. Always enabled."
+        }
+      }
+    }
   },
   "units": {
     "times": "times",
