feat(frontend): Footer 显示应用版本与构建 ID，新增本地化键并调整关于页链接
- 在 Footer 中通过 VITE_APP_VERSION 显示应用版本（缺省 'dev'）
- 新增构建 ID 解析逻辑，优先读取 VITE_GIT_COMMIT / VITE_GIT_COMMIT_ID / VITE_COMMIT_ID，取前 12 位，缺省 'local'
- 将 footer 关于页链接改为 /about-us
- 为中/英文 locale 添加 versionLabel 与 buildLabel 文案
- 在 frontend/.env 中添加 VITE_GIT_COMMIT=local

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -16,7 +16,7 @@
   },
   "nav": {
     "home": "Home",
-    "about": "About",
+    "about": "About Us",
     "dashboard": "Dashboard",
     "calculate": "Record Activity",
     "activities": "Activities",
@@ -2138,7 +2138,9 @@
     "carbonSaved": "CO₂ Saved",
     "allRightsReserved": "All rights reserved.",
     "poweredBy": "Powered by",
-    "version": "Version"
+    "version": "Version",
+    "versionLabel": "Version {{version}}",
+    "buildLabel": "Build {{id}}"
   },
   "upload": {
     "dropFiles": "Drop files here",
