fix(locales): 统一 common.json 社区统计字符串的占位符为 {{...}}（更新 en/zh）

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1901,11 +1901,11 @@
       "activities": "Carbon Records Logged",
       "carbonSaved": "Carbon Saved",
       "rewards": "Points Awarded",
-      "newUsers30d": "{value} new in 30 days",
-      "approvedRecords": "{value} approved records",
-      "carbonLast7Days": "Last 7 days: {value}",
-      "transactionsLast7": "{value} transactions in 7 days",
-      "updatedAt": "Updated {time}",
+      "newUsers30d": "{{value}} new in 30 days",
+      "approvedRecords": "{{value}} approved records",
+      "carbonLast7Days": "Last 7 days: {{value}}",
+      "transactionsLast7": "{{value}} transactions in 7 days",
+      "updatedAt": "Updated {{time}}",
       "loadError": "We couldn't load the latest community statistics. Please try again."
     },
     "features": {
