feat(email/notification): 增加异步邮件调度与通知测试邮件功能
- backend: 新增 EmailService::dispatchAsyncEmail 和 getAppName，用于在响应后异步调度邮件并在不支持时回退同步执行
- backend: AuthController 改为使用 dispatchAsyncEmail 调度验证邮件，并在审计日志中记录实际策略 (async|sync)，返回调度结果
- backend: 新增 UserController::sendNotificationTestEmail 接口（注入 EmailService），用于触发用户通知测试邮件；更新依赖注入 registrations 和路由
- frontend: NotificationSettings 页面添加“发送测试邮件”按钮、状态提示与对应的 mutation，userAPI 与路由同步新增调用
- frontend: 添加中/英本地化文案（settings.notifications.testEmail）
- frontend: Footer 构建 ID 获取改为使用 CF_PAGES_COMMIT_SHA（通过 process.env），并在 vite.config 中暴露 process.env；移除前端 .env 中的测试 VITE_GIT_COMMIT
- frontend: About 页面引入 framer-motion LazyMotion/优化动画实现、减少运动侵扰并提升滚动动效表现

简要说明：为提升邮件发送的响应性能和用户体验，提供统一的异步调度入口并新增用户可触达的测试邮件功能，同时做若干前端展示与可访问性优化。

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -2292,6 +2292,14 @@
           "label": "Direct messages",
           "description": "Email copies of messages from other users. Always enabled."
         }
+      },
+      "testEmail": {
+        "title": "Send a test email",
+        "description": "We will email a sample notification so you can confirm delivery and spam filter rules.",
+        "button": "Send test email",
+        "sending": "Sending test email...",
+        "success": "A test notification email is on its way to your inbox.",
+        "error": "Unable to send the test email. Please try again later."
       }
     }
   },
