--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -2145,6 +2145,14 @@
           "label": "站内信提醒",
           "description": "来自其他用户的站内信邮件副本（始终开启）。"
         }
+      },
+      "testEmail": {
+        "title": "发送测试邮件",
+        "description": "我们将向您的邮箱发送一封示例通知，以确认可达性和垃圾邮件规则。",
+        "button": "发送测试邮件",
+        "sending": "正在发送测试邮件…",
+        "success": "测试通知邮件已发送，请检查收件箱。",
+        "error": "测试邮件发送失败，请稍后再试。"
       }
     }
   },
