feat(email/notification): 后端生成多类别测试邮件样例并构建测试链接；前端传递 category 并支持逐项发送状态显示；更新 About 页面团队成员英文名

--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -2192,120 +2192,120 @@
       "learnMore": "了解更多",
       "members": [
         {
-          "name": "余元铮（Jack Yu）",
+          "name": "Yuanzheng (Jack) Yu",
           "role": "创始人兼项目负责人",
           "bio": "Jack 负责团队协作、长期规划与产品体验，希望通过互联网连接更多人共同参与减排行动。",
           "link": "https://yuanzhengjackyu.com/",
           "linkLabel": "个人主页"
         },
         {
-          "name": "吕子宁（Jeffery Lyu）",
+          "name": "Zining (Jeffery) Lyu",
           "role": "联合创始人 & 全栈工程师",
           "bio": "Jeffery 是核心技术负责人，负责 CarbonTrack 网站的架构、开发与维护。"
         },
         {
-          "name": "李明瀚（Loren Li）",
+          "name": "Minghan (Loren) Li",
           "role": "产品设计师 & 研究员",
           "bio": "Loren 将环境科学研究与设计结合，为用户呈现更具故事性的低碳体验，热爱摄影与户外探索。",
           "link": "https://lorenlmh.com/",
           "linkLabel": "个人主页"
         },
         {
-          "name": "倪笑笑（Smiley Ni）",
+          "name": "Smiley Ni",
           "role": "创意负责人",
           "bio": "Smiley 主导品牌视觉与内容创作，热爱舞蹈与艺术，希望让 CarbonTrack 在传播环保理念的同时带来快乐。",
           "link": "https://smileyn327.com/",
           "linkLabel": "个人主页"
         },
         {
-          "name": "刘澜",
+          "name": "Lan Liu",
           "role": "产品设计师",
           "bio": "刘澜负责产品运营与界面流程设计，喜欢徒步、陶艺，致力于推广可持续生活方式。"
         },
         {
-          "name": "石杰",
+          "name": "Jack Shi",
           "role": "产品设计师",
           "bio": "石杰关注用户旅程与社区体验，长期参与海洋保护志愿行动，希望提升大众的环保意识。"
         },
         {
-          "name": "李天祺（Tony Li）",
+          "name": "Tony Li",
           "role": "全栈工程师",
           "bio": "Tony 负责新功能开发、性能优化与交互体验迭代，让 CarbonTrack 更高效、更易用。"
         },
         {
-          "name": "彭逸飞（Eddie Peng）",
+          "name": "Eddie Peng",
           "role": "内容策划",
           "bio": "Eddie 编写文案与教育内容，让每位探索低碳生活的伙伴都能获得清晰、友好的引导。"
         },
         {
-          "name": "江麒（Michael Jiang）",
+          "name": "Michael Jiang",
           "role": "前端工程师",
           "bio": "Michael 专注于用户界面与功能开发，关注可访问性与愉悦的交互体验。"
         },
         {
-          "name": "赵博文（Peter Zhao）",
+          "name": "Peter Zhao",
           "role": "内容与视觉设计",
           "bio": "Peter 擅长故事化表达与视觉设计，热爱旅行、运动与游戏，希望号召更多人关注环保。"
         },
         {
-          "name": "靳熙娅（Kiana Jin）",
+          "name": "Kiana Jin",
           "role": "市场负责人",
           "bio": "Kiana 统筹活动、社交媒体与外部合作，把多元声音带入 CarbonTrack 社群。"
         },
         {
-          "name": "杜可蔚（Kelly Du）",
+          "name": "Kelly Du",
           "role": "环境科学顾问",
           "bio": "Kelly 审核项目的科学严谨度，撰写通俗易懂的气候科普文章，分享对海洋与气候议题的热爱。"
         },
         {
-          "name": "卢天硕（Thomas Lu）",
+          "name": "Thomas Lu",
           "role": "质量工程师",
           "bio": "Thomas 专注功能测试与用户体验优化，相信\"Attention is all you need\"，坚持细致迭代。",
           "link": "https://www.thomas-hub.com/",
           "linkLabel": "个人主页"
         },
         {
-          "name": "周本森（Benson Zhou）",
+          "name": "Benson Zhou",
           "role": "运营与社区支持",
           "bio": "Benson 参与早期视觉风格共创，如今负责审核用户提交、维护邮箱与社区反馈。"
         },
         {
-          "name": "陈瑶（Arya Chen）",
+          "name": "Arya Chen",
           "role": "界面设计师",
           "bio": "Arya 擅长 Adobe Ps/Au 等设计工具，期待持续为 CarbonTrack 打造创意与易用兼顾的体验。"
         },
         {
-          "name": "高熠（Amily Gao）",
+          "name": "Amily Gao",
           "role": "联合创始人 & 研究负责人",
           "bio": "Amily 负责背景调研与碳核算，确保内容既严谨又易于理解。"
         },
         {
-          "name": "唐杰瑞（Jerry Tang）",
+          "name": "Jerry Tang",
           "role": "联合创始人 & 碳排分析师",
           "bio": "Jerry 搭建碳核算模型并进行前期研究，为产品决策提供数据支撑。"
         },
         {
-          "name": "周奕涵（Yangyang Zhou）",
+          "name": "Yangyang Zhou",
           "role": "联合创始人",
           "bio": "杨扬热爱经济学、数学与篮球，为 CarbonTrack 的启动与战略方向提供支持。"
         },
         {
-          "name": "徐语笛（Dora Xu）",
+          "name": "Dora Xu",
           "role": "联合创始人 & 研究员",
           "bio": "Dora 负责文献综述与内容协调，希望激励更多同学从日常小事开始实现减排。"
         },
         {
-          "name": "张若菡（Hannah Zhang）",
+          "name": "Hannah Zhang",
           "role": "联合创始人 & 媒体主理",
           "bio": "Hannah 策划阅读材料、制作媒体内容，倡导用点滴行动守护环境。"
         },
         {
-          "name": "胡睿晨（Richard Hu）",
+          "name": "Richard Hu",
           "role": "联合创始人 & 工程师",
           "bio": "Richard 支持网站开发与跨团队协作，希望通过互联网传播更多节能减排理念。"
         },
         {
-          "name": "俞淑彦（Mandy Yu）",
+          "name": "Mandy Yu",
           "role": "联合创始人 & 艺术设计",
           "bio": "Mandy 负责插画与视觉创意，期待用作品激发好奇心与绿色生活灵感。"
         }
