feat(message/email,job,frontend,openapi,tests): 为广播通知新增异步排队发送与消息 ID 回传
- MessageController：在广播发送时收集创建的 message id（message_id_map / message_ids），将可投递的邮箱收集后通过 MessageService::queueBroadcastEmail 排队异步发送；广播记录响应中包含 message_ids 与 message_id_map，并在查看历史时可根据 message_ids 加载收件人列表。
- MessageService：新增 queueBroadcastEmail，去重/格式化收件人、构建 payload 并派发 broadcast_announcement 作业（保留 context，如 scope 与 message_ids）。
- EmailJobRunner：新增 broadcast_announcement 作业处理器，清洗 recipients 并调用 EmailService->sendAnnouncementBroadcast 实际发送（带错误与日志处理）。
- EmailService：新增 sendAnnouncementBroadcast 与 buildAnnouncementSubject，支持基于优先级的主题与模板渲染，并通过现有广播发送接口发出。
- openapi.json：为广播元数据补充 message_ids、message_id_map 字段，并将 email_delivery 状态枚举包含 queued，更新字段描述。
- frontend：更新 BroadcastCenter 组件与翻译（en/zh）以支持 queued 状态与相应汇总文案，调整 UI 展示优先级/状态色与摘要文本。
- tests：新增 EmailServiceTest::testSendAnnouncementBroadcastRespectsTemplatesAndPreferences，覆盖模板/首选项与模拟发送行为。

整体目标：将高优先级广播的邮件发送改为可排队的异步作业方式，同时将消息创建信息回传到广播元数据以便历史查看和关联。

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -941,9 +941,11 @@
           "sent": "Email sent",
           "partial": "Email partially delivered",
           "failed": "Email delivery failed",
+          "queued": "Email queued for delivery",
           "skipped": "Email not sent"
         },
         "summary": "Email batches: attempted {{attempted}}, succeeded {{success}}, failed {{failed}}.",
+        "queuedSummary": "Email delivery queued for {{count}} recipients.",
         "missing": "Users without email: {{count}}",
         "errorsTitle": "Email issues"
       },
