feat(admin,carbon-track,message,email,openapi,frontend,job,tests): 支持管理员批量审核碳减排记录并聚合通知
- 新增 OpenAPI 路由 /admin/activities/review（PUT），支持批量通过/驳回
- 重构 CarbonTrackController 审核逻辑：
  - 统一解析 action/status，新增 reviewRecordsBulk、resolveReviewAction、processRecordReviewBatch、getCarbonRecordsByIds、buildReviewSummaryRecord 等辅助方法
  - 支持批量事务更新、积分累加、审计日志记录及按用户聚合的站内信与邮件通知
  - 统一异常记录与返回格式
- MessageService/EmailService：
  - MessageService 新增 sendCarbonRecordReviewSummary、sanitize/dispatch helper，并把 record_approved/record_rejected 加入专用邮件类型列表
  - EmailService 新增 sendCarbonRecordReviewSummaryEmail，生成HTML/文本邮件并支持前端跳转按钮
- EmailJobRunner：支持 carbon_record_review_summary 异步邮件任务调度与处理
- 路由与 API：
  - routes.php 新增后端批量审核路由与广播队列刷新接口
  - frontend API（adminAPI）新增 reviewActivitiesBulk、flushBroadcastQueue 等方法
- 前端改动：
  - ActivityReview.jsx：新增多选 checkbox、全选状态、批量通过/驳回对话框与 reviewActivitiesBulk mutation，保持选中状态同步与 UX 提示
  - BroadcastCenter.jsx：新增刷新广播队列（flush）按钮与对应 mutation
  - 增补中/英文本地化文案以支持批量操作提示与按钮
- 测试：
  - 调整并新增单元测试（SQLite 内存 DB）覆盖单条审核与批量审核流程，验证数据库变更、积分累加、审计与通知调用

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -955,7 +955,13 @@
         "empty": "No broadcasts have been sent yet.",
         "showDetails": "Show recipients",
         "hideDetails": "Hide recipients",
-        "more": "+{{count}} more"
+        "more": "+{{count}} more",
+        "flushButton": "Process queued emails",
+        "flushLoading": "Processing...",
+        "flushSuccess": "{{count}} queued broadcast(s) processed.",
+        "flushEmpty": "No queued broadcasts to process.",
+        "flushError": "Failed to process queued emails: {{message}}",
+        "flushErrorDefault": "Unknown error"
       },
       "recipients": {
         "selected": "Selected recipients",
@@ -1436,7 +1442,14 @@
           "delete": "Disable",
           "restore": "Restore"
         }
-      }
+      },
+      "selectionHint": "Select pending records to enable batch actions.",
+      "selectedCount": "{{count}} record(s) selected",
+      "bulkApprove": "Approve Selected",
+      "bulkReject": "Reject Selected",
+      "selectAll": "Select all pending records",
+      "selectRecord": "Select record",
+      "clearSelection": "Clear selection"
     },
     "audit": {
       "title": "Audit Logs",
