feat(stats,broadcast,admin,frontend,locales): 将站内信趋势窗口扩展到30天并增强后台广播收件人展示与 i18n
- backend(stats): 引入 MESSAGE_TREND_WINDOW_DAYS 常量并将消息趋势起点从 14 日扩展为 30 日；重构消息统计处理，拆分为 summary / priority / trend 三部分并在缺少优先级或日序列数据时基于 summary 提供兜底统计（保证界面能显示总量/未读等信息）
- frontend(admin): 改进 BroadcastCenter 的 UserChips，支持 HoverCard 展示用户 ID/邮箱/状态/角色，添加“查看用户”按钮并通过 onViewUser 回调打开用户详情；将消息趋势说明更新为“最近30日”
- locales: 新增/补充中英文翻译键（收件人 hover 文案、analytics 面板文案、以及用户状态项等）

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1024,7 +1024,32 @@
         "noResults": "No users match the current search conditions.",
         "noEmail": "No email on file",
         "pageInfo": "Page {{page}}",
-        "resultCount": "Showing {{count}} recipients on this page."
+        "resultCount": "Showing {{count}} recipients on this page.",
+        "hover": {
+          "userId": "User ID",
+          "school": "School",
+          "location": "Location",
+          "status": "Status",
+          "role": "Role"
+        },
+        "viewProfile": "View user"
+      },
+      "analytics": {
+        "loadFailedTitle": "Unable to load message analytics",
+        "trendTitle": "Message delivery trend",
+        "trendSubtitle": "Total vs unread messages in the last 30 days",
+        "refreshing": "Refreshing…",
+        "totalSeries": "Total sent",
+        "unreadSeries": "Unread",
+        "trendEmpty": "No message activity in this period",
+        "priorityTitle": "Priority distribution",
+        "prioritySubtitle": "Unread volume grouped by message priority",
+        "totalMessages": "Total messages",
+        "readMessages": "Read messages",
+        "unreadMessages": "Unread messages",
+        "unreadRatio": "Current unread rate",
+        "priorityEmpty": "No priority statistics available",
+        "unreadLabelShort": "Unread"
       }
     },
     "dashboard": {
@@ -1135,6 +1160,8 @@
       "status": "Status",
       "statusActive": "Active",
       "statusInactive": "Inactive",
+      "statusSuspended": "Suspended",
+      "statusPending": "Pending",
       "title": "User Management",
       "description": "View and manage platform users",
       "refreshing": "Refreshing...",
