feat(ai,backend,frontend,admin,i18n,stats): 后端为 OpenAI 工厂注入 Guzzle 与 PSR-17 HttpFactory；增强管理员 AI 命令面板（会话记录、意图执行与导航、错误反馈、执行状态、键盘绑定修复与文案回退）；在管理员仪表盘新增平台公告阅读饼图与明细视图；从首页统计移除站内信概览块并补充中/英本地化文案和提示

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -854,6 +854,17 @@
     "edit": "Edit",
     "delete": "Delete",
     "restore": "Restore",
+    "nav": {
+      "dashboard": "Overview",
+      "users": "Users",
+      "activities": "Activities",
+      "products": "Products",
+      "badges": "Badges",
+      "avatars": "Avatars",
+      "exchanges": "Exchanges",
+      "broadcast": "Broadcast Center",
+      "systemLogs": "System Logs"
+    },
     "tabs": {
       "dashboard": "Dashboard",
       "users": "Users",
@@ -1903,6 +1914,7 @@
     "command": {
       "placeholder": "Quickly jump or run an action",
       "noResults": "No matching results",
+      "hint": "Tip: Enter natural language commands above and the assistant will suggest context-aware actions.",
       "navigation": "Navigation",
       "quickActions": "Quick actions",
       "searchUsers": "Search users",
